--- a/LogBookMaui/LogBookMaui.csproj
+++ b/LogBookMaui/LogBookMaui.csproj
@@ -52,4 +52,8 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\LogBook.Lib\LogBook.Lib.csproj" />
+	</ItemGroup>
+
 </Project>
