--- a/LogBook.LogBookApp/LogBook.LogBookApp.csproj
+++ b/LogBook.LogBookApp/LogBook.LogBookApp.csproj
@@ -62,4 +62,8 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\LogBook.Lib\LogBook.Lib.csproj" />
+	</ItemGroup>
+
 </Project>
